# miniAFQMC

./: CMakeLists.txt  Doxyfile  README.md  build.sh  build_kokkos.sh  goals.md
CMake/: ClangCompilers.cmake
SANDBOX/: benchmark_petsc.cpp  initialize_petsc.hpp  store_benchmark_petsc.cpp  taskgroup_petsc.hpp
config/: LLNLBGQ_VULCAN.cmake
example/C_2atm_szv_kp2/: afqmc.h5
example/minimal/: afqmc.h5
scripts/python/: reformat_afqmc_1.py
src/: CMakeLists.txt  Configuration.h  af_config.h  config.h.cmake.in
src/AFQMC/: AFQMCInfo.hpp  KP3IndexFactorization.hpp  KP3IndexFactorization_batched.hpp  THCOps.hpp  THCOps_gpu_um.hpp  THCOps_kokkos.hpp  afqmc_sys.hpp  afqmc_sys_batched.hpp  afqmc_sys_kokkos.hpp  afqmc_sys_shm.hpp  apply_expM.hpp  apply_expM_kokkos.hpp  energy.hpp  energy_kokkos.hpp  mixed_density_matrix.hpp  mixed_density_matrix_kokkos.hpp  rotate.hpp  tmp.THCOps.hpp  vHS.hpp  vHS_kokkos.hpp  vbias.hpp  vbias_kokkos.hpp
src/HamiltonianOperations/: HamOpsIO.hpp  HamiltonianOperations.hpp  KP3IndexFactorization.hpp  KP3IndexFactorizationIO.hpp  SparseTensor.hpp  SparseTensorIO.hpp  THCOps.hpp  THCOpsIO.hpp  sparse_matrix_energy.hpp
src/Kernels/: KaKjw_to_KKwaj.cu  KaKjw_to_KKwaj.cuh  KaKjw_to_QKajw.cu  KaKjw_to_QKajw.cuh  acAxpbB.cu  acAxpbB.cuh  adiagApy.cu  adiagApy.cuh  adotpby.cu  adotpby.cuh  ajw_to_waj.cu  axty.cu  axty.cuh  batchedDot.cu  batched_Tab_to_Klr.cu  batched_dot_wabn_wban.cu  batched_dot_wabn_wban.cuh  copy_n_cast.cu  copy_n_cast.cuh  determinant.cu  determinant.cuh  dot_wabn_wban.cu  fill_n.cu  fill_n.cuh  print.cu  print.cuh  setIdentity.cu  setIdentity.cuh  (+8 more)
src/miniapps/: CMakeLists.txt  benchmark.cpp  blas_test.cpp  config.0.h  miniafqmc.cpp  miniafqmc_base.cpp  miniafqmc_base_kokkos.cpp  miniafqmc_cuda_gpu.cpp  miniafqmc_cuda_gpu_batched.cpp  miniafqmc_cuda_gpu_batched_nccl.cpp  miniafqmc_cuda_gpu_mpi.cpp  miniafqmc_cuda_gpu_nccl.cpp  miniafqmc_cuda_managed.cpp  miniafqmc_cuda_outofcore.cpp  miniafqmc_kokkos.cpp  miniafqmc_shm.cpp  miniafqmc_shm2.cpp  miniafqmc_shm3.cpp  miniafqmc_shm4.cpp  miniafqmc_shm5.cpp  miniqmc.cpp
(+143 files in other folders)
